fix mobile ui
- header padding 100px to prevent covering of page title by github ribbon
- moving the last updated text to prevent shrinking of prices

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -9,6 +9,7 @@ header {
     background-color: #FFF;
     box-shadow: 0px 0px 5px #000;
     padding: 20px;
+    padding-right: 100px;
 }
 
 header * {
@@ -119,6 +120,14 @@ header h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* last update */
+
+.last_update {
+    margin-top: 20px;
+    text-align: center;
 }
 
 
